# mnist_digit_recognition

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
digit_recognition/: app.py
digit_recognition/ml/: metrics.py  model.py
mnist_digit_recognition/: app.py
mnist_digit_recognition/ml/: inference.py  model.py  train.py
number_recognition/: app.py
number_recognition/gui/: gui.py
number_recognition/ml/: data_loader.py  train.py
