[tool.poetry]
name = "mnist-digit-recognition"
version = "0.1.0"
description = ""
authors = ["akempins <01178535@pw.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.5.1"
contourpy = "1.3.1"
cycler = "0.12.1"
filelock = "3.16.1"
fonttools = "4.55.3"
fsspec = "2024.12.0"
jinja2 = "3.1.5"
joblib = "1.4.2"
kiwisolver = "1.4.8"
markupsafe = "3.0.2"
matplotlib = "3.10.0"
mpmath = "1.3.0"
networkx = "3.4.2"
numpy = "2.2.1"
packaging = "24.2"
pillow = "11.1.0"
pyparsing = "3.2.1"
python-dateutil = "2.9.0.post0"
scikit-learn = "1.6.0"
scipy = "1.15.0"
six = "1.17.0"
sympy = "1.13.1"
threadpoolctl = "3.5.0"
torchvision = "0.20.1"
typing-extensions = "4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
digit-recognition = "mnist_digit_recognition.app:app"
